    * css/phpmyadmin.css.php:
      - small improvements
    * themes/darkblue_orange/css/*
      - fixed font sizes
    * lang/english-*: small improvements
    * tbl_properties_structure.php
      - do not truncate rowcount and next autoindex
    * /*
      - common.lib.php should REALLY REALLY and ALWAYS be the first include
      - no other calls to grab_gloabls.lib.php

2005-11-17 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1353283, thanks to Isaac Bennetch
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/belarusian updates, thanks to Jaska Zedlik

2005-11-17 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/grab_globals.lib.php: just to be sure:
      - clean/empty $GLOBALS with $variables_whitelist
      - unset some vars after use
      - check all superglobals that could be imported by register_globals=on
        for GLOBALS key (not only _REQUEST and _FILES )
      - added $import_blacklist
        - added variables starting with pma_, numeric or containing spaces
        - *REVERT* do not prevent import pma_*
      - rewrote PMA_gpc_extract()
        - use $import_blacklist
        - documentation
    * libraries/common.lib.php, libraries/mysql_charsets.lib.php,
      libraries/select_lang.php: keep the global space clean
      - unset variables after use
      - commented out some never used variables
    * main.php, libraries/common.lib.php, libraries/dbi/*:
      - added $GLOBALS['PMA_errors'] array
    * libraries/database_interface.lib.php, libraries/dbi/*:
      fall back to alternative mysql extension if selected fails and switch to
      error.php if this fails too
       - moved loading of extension out of libraries/dbi/* into
         libraries/database_interface.lib.php
    * libraries/sanitizing.lib.php: dont use deprecated tags
    * lang/german-*: fixed $strCantLoad

2005-11-16 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_links.php: missing menu tabs