@@ -20,6 +20,7 @@ $Source$
     * /*
       - common.lib.php should REALLY REALLY and ALWAYS be the first include
       - no other calls to grab_gloabls.lib.php
+    * fixed minimum_common for css files
 
 2005-11-17 Marc Delisle  <lem9@users.sourceforge.net>
     * Documentation.html: patch #1353283, thanks to Isaac Bennetch
